# gitr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/git-cli/: Cargo.toml
crates/git-cli/benches/: perf_compare.rs  perf_helpers.rs
crates/git-cli/src/: interactive.rs  main.rs
crates/git-cli/src/commands/: add.rs  am.rs  apply.rs  archive.rs  bisect.rs  blame.rs  branch.rs  bundle.rs  cat_file.rs  check_attr.rs  check_ignore.rs  check_ref_format.rs  checkout.rs  cherry.rs  cherry_pick.rs  clean.rs  clone.rs  commit.rs  commit_graph.rs  commit_tree.rs  config.rs  count_objects.rs  credential.rs  daemon.rs  describe.rs  diff.rs  diff_files.rs  diff_index.rs  diff_tree.rs  difftool.rs  fast_import.rs  fetch.rs  fmt_merge_msg.rs  for_each_ref.rs  format_patch.rs  fsck.rs  gc.rs  grep.rs  hash_object.rs  index_pack.rs  (+55 more)
crates/git-cli/tests/: e2e_advanced_tests.rs  e2e_bundle_archive_notes_tests.rs  e2e_edge_case_tests.rs  e2e_maintenance_hooks_scale_tests.rs  e2e_missing_commands_tests.rs  e2e_phase4_core_tests.rs  e2e_phase4_flag_tests.rs  e2e_phase4_subcmd_tests.rs  e2e_plumbing_coverage_tests.rs  e2e_porcelain_coverage_tests.rs  e2e_remote_tests.rs  e2e_workflow_tests.rs  history_tests.rs  parity_edge_cases_tests.rs  parity_error_tests.rs  parity_flags_checkout_status_add.rs  parity_flags_commit_branch_merge_tag.rs  parity_flags_config_reset_stash_remote.rs  parity_flags_log_diff_show.rs  parity_flags_plumbing_deep.rs  parity_flags_porcelain_deep.rs  parity_flags_rebase_pick_revert.rs  parity_flags_tier1_gaps.rs  parity_phase2_tests.rs  parity_polish_tests.rs  parity_reflog_tests.rs  parity_stderr_tests.rs  parity_tests.rs  perf_optimization_tests.rs  plumbing_tests.rs  porcelain_tests.rs
crates/git-cli/tests/common/: mod.rs
crates/git-config/: Cargo.toml
crates/git-config/benches/: config_bench.rs
crates/git-config/src/: env.rs  error.rs  file.rs  include.rs  lib.rs  parse.rs  set.rs  types.rs  url_rewrite.rs
crates/git-config/tests/: include_tests.rs  parse_compat.rs  type_conversion.rs  write_roundtrip.rs
crates/git-diff/: Cargo.toml
crates/git-diff/src/: binary.rs  color.rs  diffcore.rs  driver.rs  lib.rs  pickaxe.rs  rename.rs  tree.rs  worktree.rs
crates/git-diff/src/algorithm/: histogram.rs  mod.rs  myers.rs  patience.rs
crates/git-diff/src/format/: combined.rs  mod.rs  nameonly.rs  raw.rs  stat.rs  unified.rs  word_diff.rs
crates/git-diff/tests/: algorithm_tests.rs  output_compat.rs  rename_tests.rs
crates/git-hash/: Cargo.toml
crates/git-hash/benches/: hash_bench.rs
crates/git-hash/src/: algorithm.rs  error.rs  fanout.rs  hasher.rs  hex.rs  lib.rs  oid.rs
crates/git-hash/src/collections/: mod.rs  oid_array.rs  oid_map.rs  oid_set.rs
crates/git-hash/tests/: algorithm_pluggability.rs  collection_tests.rs  hash_vectors.rs  hex_roundtrip.rs
crates/git-index/: Cargo.toml
crates/git-index/src/: attributes.rs  entry.rs  eol.rs  filter.rs  ignore.rs  lib.rs  pathspec.rs  read.rs  sparse.rs  write.rs
crates/git-index/src/extensions/: mod.rs  resolve_undo.rs  tree.rs  untracked.rs
crates/git-index/tests/: ignore_compat.rs  pathspec_compat.rs  read_write_roundtrip.rs
crates/git-loose/: Cargo.toml
crates/git-loose/benches/: loose_bench.rs
crates/git-loose/src/: enumerate.rs  lib.rs  read.rs  stream.rs  write.rs
crates/git-loose/tests/: interop.rs
crates/git-merge/: Cargo.toml
crates/git-merge/src/: apply.rs  cherry_pick.rs  conflict.rs  content.rs  lib.rs  rerere.rs  revert.rs  sequencer.rs
crates/git-merge/src/strategy/: mod.rs  octopus.rs  ort.rs  ours.rs  subtree.rs
crates/git-merge/tests/: conflict_tests.rs  content_merge.rs
crates/git-object/: Cargo.toml
crates/git-object/benches/: parse_bench.rs
crates/git-object/src/: blob.rs  cache.rs  commit.rs  header.rs  lib.rs  name.rs  tag.rs  tree.rs
crates/git-object/tests/: serialize_roundtrip.rs  tree_sorting.rs
crates/git-odb/: Cargo.toml
crates/git-odb/src/: alternates.rs  backend.rs  lib.rs  prefix.rs  search.rs
crates/git-odb/tests/: alternates.rs  concurrent.rs  unified_read.rs
crates/git-pack/: Cargo.toml
crates/git-pack/benches/: delta_bench.rs  pack_read_bench.rs
crates/git-pack/src/: bitmap.rs  entry.rs  generate.rs  index.rs  lib.rs  midx.rs  pack.rs  revindex.rs  verify.rs  write.rs
crates/git-pack/src/delta/: apply.rs  compute.rs  mod.rs
crates/git-pack/tests/: read_real_packs.rs  roundtrip.rs
crates/git-pack/tests/fixtures/: test.idx  test.pack
crates/git-protocol/: Cargo.toml
crates/git-protocol/src/: bundle.rs  capability.rs  fetch.rs  lib.rs  pktline.rs  push.rs  remote.rs  sideband.rs  v1.rs  v2.rs
crates/git-protocol/tests/: fetch_tests.rs  pktline_tests.rs  push_tests.rs
crates/git-ref/: Cargo.toml
crates/git-ref/src/: error.rs  lib.rs  name.rs  reflog.rs  store.rs
crates/git-ref/src/files/: loose.rs  mod.rs  packed.rs  transaction.rs
crates/git-ref/tests/: concurrent.rs  reflog_interop.rs  resolve_interop.rs  update_interop.rs
crates/git-repository/: Cargo.toml
crates/git-repository/src/: discover.rs  editor.rs  env.rs  error.rs  gpg.rs  hooks.rs  init.rs  lib.rs  worktree.rs
crates/git-repository/tests/: discover_interop.rs  env_tests.rs  init_interop.rs  repository_tests.rs  worktree_tests.rs
crates/git-revwalk/: Cargo.toml
crates/git-revwalk/src/: cherry.rs  filter.rs  graph_draw.rs  lib.rs  merge_base.rs  objects.rs  pretty.rs  range.rs  walk.rs
crates/git-revwalk/src/commit_graph/: mod.rs  parse.rs  write.rs
crates/git-revwalk/tests/: commit_graph_tests.rs  merge_base_tests.rs  pretty_tests.rs  walk_order.rs
crates/git-transport/: Cargo.toml
crates/git-transport/src/: credential.rs  http.rs  lib.rs  local.rs  ssh.rs  url.rs
crates/git-utils/: Cargo.toml
crates/git-utils/benches/: path_bench.rs
crates/git-utils/src/: bstring.rs  cli.rs  color.rs  date.rs  error.rs  lib.rs  lockfile.rs  mailmap.rs  pager.rs  path.rs  progress.rs  subprocess.rs  tempfile.rs  wildmatch.rs
crates/git-utils/tests/: bstring_prop.rs  date_compat.rs  lockfile_stress.rs  wildmatch_corpus.rs
(+175 files in other folders)
