[package]
name = "git-diff"
description = "Diff engine: line-level algorithms, tree diff, rename detection, and output formatting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git-utils = { workspace = true }
git-hash = { workspace = true }
git-object = { workspace = true }
git-odb = { workspace = true }
git-index = { workspace = true }
git-repository = { workspace = true }
bstr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
