[package]
name = "git-index"
description = "Index (staging area) reading, writing, and manipulation for the gitr git implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git-utils = { workspace = true }
git-hash = { workspace = true }
git-object = { workspace = true }
git-odb = { workspace = true }
git-config = { workspace = true }
bstr = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
