[package]
name = "git-merge"
description = "Merge engine: three-way content merge, ORT tree merge, conflict handling, cherry-pick, revert, and sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git-utils = { workspace = true }
git-hash = { workspace = true }
git-object = { workspace = true }
git-odb = { workspace = true }
git-index = { workspace = true }
git-diff = { workspace = true }
git-repository = { workspace = true }
bstr = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
