[package]
name = "git-repository"
description = "Repository discovery, initialization, and central struct for the gitr git implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git-utils = { workspace = true }
git-hash = { workspace = true }
git-odb = { workspace = true }
git-ref = { workspace = true }
git-config = { workspace = true }
git-index = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
